--- a/style.css
+++ b/style.css
@@ -1,23 +1,21 @@
 body{
     overflow: hidden;
    margin: 0%;
-    width: 100%;
-    height: 100%;
+    width: 1275px;
+    height: 590px;
+    display: grid;
+    background: linear-gradient(90deg, #fcff9e 0%, #c67700 100%); 
+   
+    grid-template-columns: repeat(12,1fr);
+    grid-template-rows: repeat(7,1fr);
 }
 @font-face {
     font-family: myfont;
     src: url('assets/EduTASBeginner-VariableFont_wght.ttf');
 }
 
-#general_container{
-    width: 1843px;
-    height: 970px;
-    display: grid;
-    background: linear-gradient(90deg, #fcff9e 0%, #c67700 100%);
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(7,1fr);
-}
-#container{
+
+ #container{
     grid-area: 2/3/7/11;
     display: grid;
     grid-template-columns: repeat(5,1fr);
@@ -25,39 +23,78 @@ body{
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+  
 #sign_in{
     grid-column-start: 1;
     grid-column-end: 3;
     background-color: white;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
+    
 }
+#sign_up{
+    grid-column-start: 3;
+    grid-column-end: 6;
+    
+}
+#sign_up_image{
+    position: absolute;
+    width: 510px;
+    height: 422px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.signup_message{
+    position: absolute;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+}
+#head{
+    position: relative;
+    left: 30px; 
+    font-size: 65px;
+}
+#bot{
+    position: relative;
+    left: 35px; bottom: 20px;
+    font-size: 35px;
+}
+#sign_up_button{
+    font-size: 30px;
+    width: 180px;
+    height: 40px;
+    border-radius: 15px;
+    color: black;
+    background-color: white;
+}
+
 #logo{
-    height: 70px;
-    width: 70px;
+    height: 45px;
+    width: 45px;
     position: relative;
     left: 15px; top: 10px;
 }
 #title{
-    font-size: 35px;
+    font-size: 25px;
     font-family: myfont;
     position: relative;
-    left: 100px; bottom: 90px;
+    left: 65px; bottom: 60px;
 }
 #text{
-    font-size: 80px;
+    font-size: 65px;
     font-weight: 800;
    
     position: relative;
-    left: 110px; bottom: 70px;
+    left: 70px; bottom: 70px;
 }
 form{
     position: relative;
-    top: -80px; left: 80px;
+    top: -80px; left: 90px;
 }
 input{
-    height: 35px;
-    width: 450px;
+    height:30px;
+    width: 290px;
     border-radius: 15px;
 }
 input:invalid{
@@ -74,47 +111,20 @@ input:valid{
     position: relative;
     top: 30px; left: -70px;
 }
-#sign_in_button{
-    font-size: 15px;
-    width: 200px;
+ #sign_in_button{
+    font-size: 20px;
+    font-weight: 600;
+    width: 120px;
     height: 40px;
-    border-radius: 15px;
+   border-radius: 15px; 
     color: white;
     background-color: orange;
+     border-color: orange;
     position: relative;
-    top: 60px; left: 60px;
-}
-#sign_up{
-    grid-column-start: 3;
-    grid-column-end: 6;
-}
-#sign_up_image{
-    position: absolute;
-    width: 737px;
-    height: 695px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-}
-.signup_message{
-    position: absolute;
-    font-size: 50px;
-    text-align: center;
-    color: white;
-}
-#head{
-    font-size: 90px;
-    position: relative;
-    left: 20px;
-}
-#bot{
-    position: relative;
-    left: 30px;
-}
-#sign_up_button{
-    font-size: 35px;
-    width: 250px;
-    height: 50px;
-    border-radius: 15px;
-    color: black;
-    background-color: white;
-}
+    top: 60px; left: 30px;
+} 
+
+
+
+
+ 
